--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -101,11 +101,16 @@
   padding-top: 50px;
 }
 
-@media (max-width: 1500px) {
-  .resume {
-    padding: 40px 60px;
-    padding-top: 140px;
-  }
+.resume--grid h4 {
+  border: 1px dashed red;
+}
+
+.resume--grid--experience--head {
+  border: 1px dashed blue;
+}
+
+.resume--grid {
+  border: 1px solid yellow;
 }
 
 @media (max-width: 700px) {
@@ -141,9 +146,7 @@
     flex-direction: column-reverse;
     gap: 30px;
   }
-}
 
-@media (max-width: 700px) {
   .resume--grid--experience--head > * {
     width: 100%;
     min-width: 0;
@@ -153,10 +156,9 @@
     white-space: normal;
     font-size: 1.4rem;
     line-height: 1.5;
+    margin-bottom: 8px;
   }
-}
 
-@media (max-width: 700px) {
   .resume--grid ul li {
     font-size: 15px;
     line-height: 150%;
