--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -140,3 +140,19 @@ h3,
   top: 20px; /* 🔁 ajusta este valor hasta que visualmente se vea bien alineado */
   z-index: 2;
 }
+
+@media (max-width: 768px) {
+  .projects--grid--title {
+    margin-bottom: 16px;
+  }
+
+  .projects--header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+
+  .projects--title {
+    font-size: 24px;
+  }
+}
